# github-workflows-update

./: Cargo.toml  Dockerfile  README.md  action.yml  build.rs
.github/workflows/: ci.yml
src/: cli.rs  cmd.rs  entity.rs  error.rs  lib.rs  prettyvers.rs  processor.rs  proxy.rs  resolver.rs  resource.rs  version.rs  workflow.rs
src/updater/: docker.rs  github.rs  mod.rs
src/vers/: docker.rs  mod.rs  resolver.rs  updater.rs
