[package]
name = "github-workflows-update"
description = "Check github workflows for actions that can be updated"
version = "0.3.27"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/github-workflows-update"
repository = "https://github.com/lpenz/github-workflows-update"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["github-action", "version-update"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
lenient_semver = "0.4.2"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
semver = "1.0.27"
serde_json = "1.0.145"
serde_norway = "0.9.42"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tracing = { version = "0.1.43", features = ["log"] }
url = "2.5.7"

[build-dependencies]
anyhow = "1.0.100"
man = "0.3.0"

[package.metadata.deb]
section = "utils"
extended-description = """\
github-workflows-update reads all github workflow and checks the latest
available versions of all github actions and workflow dispatches used, showing
which ones can be updated and optionally updating them automatically.
"""
assets = [
    ["target/release/github-workflows-update.1", "usr/share/man/man1/", "644"],
    ["target/release/github-workflows-update", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/github-workflows-update/", "644"],
    ["AUTHORS", "usr/share/doc/github-workflows-update/", "644"],
    ["README.md", "usr/share/doc/github-workflows-update/", "644"],
]
