[package]
name = "github-workflows-update"
description = "Check github workflows for actions that can be updated"
version = "0.3.30"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/github-workflows-update"
repository = "https://github.com/lpenz/github-workflows-update"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["github-action", "version-update"]

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
clap = { version = "4.5.57", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
lenient_semver = "0.4.2"
once_cell = "1.21.3"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
semver = "1.0.27"
serde_json = "1.0.149"
serde_norway = "0.9.42"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
tracing = { version = "0.1.44", features = ["log"] }
url = "2.5.8"

[build-dependencies]
anyhow = "1.0.101"
man = "0.3.0"

[package.metadata.deb]
section = "utils"
extended-description = """\
github-workflows-update reads all github workflow and checks the latest
available versions of all github actions and workflow dispatches used, showing
which ones can be updated and optionally updating them automatically.
"""
assets = [
    ["target/release/github-workflows-update.1", "usr/share/man/man1/", "644"],
    ["target/release/github-workflows-update", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/github-workflows-update/", "644"],
    ["AUTHORS", "usr/share/doc/github-workflows-update/", "644"],
    ["README.md", "usr/share/doc/github-workflows-update/", "644"],
]
