[package]
name = "github-workflows-update"
description = "Check github workflows for actions that can be updated"
version = "0.4.0"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/github-workflows-update"
repository = "https://github.com/lpenz/github-workflows-update"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["github-action", "version-update"]

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.10"
futures = "0.3.32"
lenient_semver = "0.4.2"
once_cell = "1.21.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
semver = "1.0.28"
serde_json = "1.0.149"
serde_norway = "0.9.42"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
tracing = { version = "0.1.44", features = ["log"] }
url = "2.5.8"

[build-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.2"
clap2man = "0.1.1"
color-eyre = "0.6.3"
man = "0.3.0"

[package.metadata.deb]
section = "utils"
extended-description = """\
github-workflows-update reads all github workflow and checks the latest
available versions of all github actions and workflow dispatches used, showing
which ones can be updated and optionally updating them automatically.
"""
assets = [
    ["target/release/github-workflows-update.1", "usr/share/man/man1/", "644"],
    ["target/release/github-workflows-update", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/github-workflows-update/", "644"],
    ["AUTHORS", "usr/share/doc/github-workflows-update/", "644"],
    ["README.md", "usr/share/doc/github-workflows-update/", "644"],
    ["target/release/github-workflows-update.bash", "/usr/share/bash-completion/completions/", "644"],
    ["target/release/_github-workflows-update", "/usr/share/zsh/site-functions/", "644"],
    ["target/release/github-workflows-update.fish", "/usr/share/fish/vendor_completions.d/", "644"],
]
